objects/PT_Install_Location__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Past_Due_Pending_MROD_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_MROD_Date__c</fullName>
        <label>Forecast MROD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_ExternalId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>data load composite key of shipset_id and parts_id</inlineHelpText>
        <label>L2I_ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MROD__c</fullName>
        <label>MROD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Provider_Status__c</fullName>
        <formula>IMAGE(
CASE(TEXT( Quote_Line_Group__r.PO_Provider__r.L2I_Payment_Term__c),
&quot;NO TERMS&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;30 NET&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Cash in Advance&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;CIA&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;Payment Terms color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Credit Status of PO Provider</inlineHelpText>
        <label>PO Provider Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Provider__c</fullName>
        <formula>Quote_Line_Group__r.PO_Provider__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Line Group PO Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Provider_old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Override lookup for PO Provider for this install location</inlineHelpText>
        <label>Install Location PO Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Install_Location__c</fullName>
        <label>Install Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Part_List_Name__c</fullName>
        <formula>Part_List_Opportunity__r.PT_Part_List_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part List Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>PT_Program__c</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Seat_Count__c</fullName>
        <label>Seat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Seat_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seat Model</label>
        <referenceTo>PT_Seat_Model__c</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Seat_Vendor__c</fullName>
        <label>Seat Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Seat_Vendor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_List_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Install Location linked to Part List Opportunity</inlineHelpText>
        <label>Part List Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_List_Actions__c</fullName>
        <formula>HYPERLINK(&quot;/apex/Grid?gname=Parts List Actions&amp;fpf=L2I_Program_Num__c&amp;fpv=&quot; &amp; Part_List_Opportunity__r.L2I_Program_Num__c, &quot;Parts List Actions&quot; , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts List Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_D1_Date__c</fullName>
        <label>Pending D1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_MROD__c</fullName>
        <label>Pending MROD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_PO_Provider__c</fullName>
        <formula>PT_Program__r.PO_Provider__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Program Level PO Provider</inlineHelpText>
        <label>Primary PO Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Group</label>
        <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_PO_Provider__c</fullName>
        <formula>PT_Program__r.Secondary_PO_Provider__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary PO Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShipSet</label>
        <referenceTo>L2I_DSL__c</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Group</label>
        <referenceTo>SBQQ__SolutionGroup__c</referenceTo>
        <relationshipLabel>Install Locations</relationshipLabel>
        <relationshipName>Install_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Install Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PT_Program__c</columns>
        <columns>ShipSet__c</columns>
        <columns>Forecast_MROD_Date__c</columns>
        <columns>MROD__c</columns>
        <columns>Pending_MROD__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Install Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Pending_MROD_is_Past_Due</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(OR (Pending_MROD__c &lt;  TODAY(), ISBLANK( Pending_MROD__c ) ),  
			    ISCHANGED(Pending_MROD__c ),
			    Allow_Past_Due_Pending_MROD_Date__c != true ),
AND(OR (Pending_D1_Date__c &lt;  TODAY(), ISBLANK( Pending_D1_Date__c ) ),  
			    ISCHANGED(Pending_D1_Date__c ),
			    Allow_Past_Due_Pending_MROD_Date__c != true )
)</errorConditionFormula>
        <errorMessage>The Pending MROD or D1 is Past Due. Check the &#39;Allow Past Due&#39; box to continue processing of this date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Seat_Count_and_Seat_Model</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Solution_Group__r.PT_is_Seat_End__c)
&amp;&amp;
(
NOT(ISBLANK(PT_Seat_Count__c)) ||
NOT(ISBLANK(PT_Seat_Model__c))
)</errorConditionFormula>
        <errorMessage>Only Seat End groups should have the values selected for Seat Count and Seat Model.</errorMessage>
    </validationRules>
</CustomObject>